erDiagram
    allocation_project ||--o{ data_package : owns
    allocation_project ||--o{ input_snapshot : has
    allocation_project ||--o{ snapshot_store : snapshots
    allocation_project ||--o{ audit_log : logs
    data_package ||--o{ data_resource : contains
    data_resource ||--o{ data_resource_field : has
    allocation_project ||--o{ party : has
    data_resource ||--o{ data_resource_party_relation : binds
    party ||--o{ data_resource_party_relation : provides
    data_package ||--o{ quality_assessment : evaluated_by
    quality_assessment ||--o{ quality_score_detail : has
    quality_assessment ||--o{ shuyuan_metering : drives
    shuyuan_metering ||--o{ shuyuan_metering_detail : has
    party ||--o{ contribution_record : contributes
    contribution_record ||--o{ utility_record : inputs
    utility_function_snapshot ||--o{ utility_record : defines
    utility_record ||--o{ utility_trace : explains
    utility_function_snapshot ||--o{ md_dshap_task : powers
    md_dshap_task ||--o{ md_dshap_result : produces
    md_dshap_task ||--o{ md_dshap_marginal_trace : traces
    md_dshap_task ||--o{ algorithm_audit_snapshot : audits
    md_dshap_task ||--o{ allocation_scenario : weights
    allocation_scenario ||--o{ allocation_priority_item : priority
    allocation_scenario ||--o{ allocation_result : results
    contract_constraint ||--o{ constraint_apply_trace : applies
    allocation_scenario ||--o{ constraint_apply_trace : traces
    allocation_project ||--o{ report_record : reports
    report_record ||--o{ export_file : files
    nav_menu ||--o{ permission : actions
    user_account ||--o{ user_role : assigned
    role ||--o{ user_role : grants
    role ||--o{ role_permission : owns
    permission ||--o{ role_permission : referenced
